2007-07-13 Add MPL_isfinite64() and MPL_isinf64() for testing
           doubles in (the now misnamed) MPL_isnan.h. - ADS

2007-07-13 The matplotlib._isnan module removed (use numpy.isnan) - ADS

2007-07-13 Some minor cleanups in _transforms.cpp - ADS

2007-07-13 Removed the rest of the numerix extension code detritus,
           numpified axes.py, and cleaned up the imports in axes.py
	   - JDH

2007-07-13 Added legend.loc as configurable option that could in
           future default to 'best'. - NN

2007-07-12 Bugfixes in mlab.py to coerce inputs into numpy arrays. -ADS

2007-07-11 Added linespacing kwarg to text.Text - EF

2007-07-11 Added code to store font paths in SVG files. - MGD

2007-07-10 Store subset of TTF font as a Type 3 font in PDF files. - MGD

2007-07-09 Store subset of TTF font as a Type 3 font in PS files. - MGD

2007-07-09 Applied Paul's pick restructure pick and add pickers,
           sourceforge patch 1749829 - JDH


2007-07-09 Applied Allan's draw_lines agg optimization. JDH


2007-07-08 Applied Carl Worth's patch to fix cairo draw_arc - SC

2007-07-07 fixed bug 1712099: xpdf distiller on windows - DSD

2007-06-30 Applied patches to tkagg, gtk, and wx backends to reduce
           memory leakage.  Patches supplied by Mike Droettboom;
           see tracker numbers 1745400, 1745406, 1745408.
           Also made unit/memleak_gui.py more flexible with
           command-line options. - EF

2007-06-30 Split defaultParams into separate file rcdefaults (together with
           validation code). Some heavy refactoring was necessary to do so,
           but the overall behavior should be the same as before. - NN

2007-06-27 Added MPLCONFIGDIR for the default location for mpl data
           and configuration.  useful for some apache installs where
           HOME is not writable.  Tried to clean up the logic in
           _get_config_dir to support non-writable HOME where are
           writable HOME/.matplotlib already exists - JDH
